# s2e-env

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pylint_rc  pyproject.toml  setup.py  test.sh
.github/workflows/: test.yaml
s2e_env/: __init__.py  command.py  manage.py
s2e_env/analysis/: elf.py  pe.py
s2e_env/commands/: basic_block_coverage.py  build.py  coverage.py  deps.py  execution_trace.py  export_project.py  forkprofile.py  image_build.py  image_templates.py  import_project.py  info.py  init.py  lcov.py  new_plugin.py  new_project.py  recipe.py  run.py  testsuite.py  update.py
s2e_env/commands/code_coverage/: __init__.py  lcov.py  (+4 more)
s2e_env/dat/: cgc.magic  config.yaml
s2e_env/execution_trace/: TraceEntries_pb2.py  TraceEntries_pb2.pyi  __init__.py  analyzer.py  modules.py  trace_entries.py
s2e_env/infparser/: __init__.py  case_insensitive_dict.py  device.py  driver.py  file.py  parseinf.py  parser.py  section.py  version.py
s2e_env/server/: __init__.py  cgc_interface.py  collector_threads.py  coverage.py  queueprocessor.py  stats.py  threads.py  web_service_interface.py
s2e_env/symbols/: __init__.py  debuglink.py  functions.py  lines.py  paths.py  pe.py
s2e_env/templates/: bootstrap.cgc.sh  bootstrap.common.sh  bootstrap.header.sh  bootstrap.linux.sh  bootstrap.sh  bootstrap.windows.sh  bootstrap.windows_common.sh  bootstrap.windows_dll.sh  bootstrap.windows_driver.sh  instructions.txt  launch-non-s2e.sh  launch-raw.sh  launch-s2e.sh  models.lua  s2e-config.bios.lua  s2e-config.cgc.lua  s2e-config.common.lua  s2e-config.linux.lua  s2e-config.lua  s2e-config.windows.lua  s2e.yaml  s2e_activate.sh  symranges.template  verify-pov.sh
s2e_env/tui/: tui.py
s2e_env/utils/: elf.py  google.py  host.py  image_download.py  images.py  log.py  memoize.py  pe.py  repos.py  tempdir.py  templates.py  terminal.py
tests/analysis/: test_elf.py  test_pe.py
tests/dat/: cat  scanner.inf
tests/data/: scanner.sys
tests/execution_trace/: test_modules.py
(+39 files in other folders)
